# obsidian-brain

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  indexer.py  server.py  tauri.conf.json
.github/workflows/: rust.yml
src/: chunker.rs  config.rs  db.rs  embeddings.rs  index.rs  ipc.rs  main.rs  search.rs  watcher.rs
