[package]
name = "obra"
version = "0.1.1"
edition = "2021"
description = "A fast, semantic search CLI for your Obsidian vault, built in Rust"
license = "CC-BY-NC-4.0"
repository = "https://github.com/stephenyu/obsidian-brain"
homepage = "https://github.com/stephenyu/obsidian-brain"
documentation = "https://github.com/stephenyu/obsidian-brain"
readme = "README.md"
keywords = ["obsidian", "search", "semantic-search", "embeddings", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# Vector index (replaces lancedb + datafusion + arrow stack)
usearch = "2"

# Embeddings (replaces fastembed + ONNX Runtime)
candle-core = { version = "0.8", default-features = false, features = ["metal"] }
candle-nn = { version = "0.8", default-features = false, features = ["metal"] }
candle-transformers = { version = "0.8", default-features = false }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "0.4" }

# CLI + utilities (unchanged)
clap = { version = "=4.5.23", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
tauri = { version = "1.8", features = ["system-tray"] }
notify = "6.1"
interprocess = "1.2.1"
fs2 = "0.4"
rayon = "1.11.0"

[build-dependencies]
tauri-build = "1.5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
